--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">Journal_Perso</string>
+    <string name="title_activity_menu">MenuActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="accueil">Accueil</string>
+    <string name="mesEsapces">Mes espaces</string>
+    <string name="espacesDuJour">Mes espaces du jour :</string>
+    <string name="consulterDonnees">Mes données</string>
+    <string name="parametres">Paramètres</string>
+    <string name="menu_send">Send</string>
 </resources>
