--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,10 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="accueil">Accueil</string>
-    <string name="mesEsapces">Mes espaces</string>
-    <string name="espacesDuJour">Mes espaces du jour :</string>
-    <string name="consulterDonnees">Mes données</string>
-    <string name="parametres">Paramètres</string>
-    <string name="menu_send">Send</string>
+    <string name="menu_accueil">Accueil</string>
+    <string name="menu_mesEsapces">Mes espaces</string>
+    <string name="menu_espacesDuJour">Mes espaces du jour :</string>
+    <string name="menu_consulterDonnees">Mes données</string>
+    <string name="menu_parametres">Paramètres</string>
+    <string name="menu_calendrier">Calendrier</string>
 </resources>
